# HPD-Agent

./: .env.example  .gitignore  AGENTS.md  HPD-Agent.md  LICENSE  README.md  README.zh.md  pyproject.toml  requirements.txt
src/: main.py  run.py  system_info.py
src/agents/: __init__.py  coordinator_agent.py  expert_agent.py  query_agent.py
src/cli/: __init__.py  renderer.py
src/commands/: __init__.py  completer.py  details.py
src/commands/handlers/: __init__.py  context_cmd.py  exit.py  help.py  love.py  model_cmd.py  new_session.py  sessions.py  skim.py  summary.py  tokens.py  trace.py
src/core/: __init__.py  enums.py  models.py  observability.py  state.py
src/llm/: __init__.py  client.py  prompts.py
src/memory/: __init__.py  checkpointer.py  context.py  session_store.py
src/models/: __init__.py  store.py
src/nodes/: __init__.py  assessment.py  decomposer.py  direct_answer.py  evaluator.py  execution.py  executor.py  planner.py  planning.py  reflector.py  reviewer.py  rewriter.py  scheduler.py  scheduler_node.py  synthesizer.py
src/tools/: apply_patch.py  project_scanner.py  registry.py
src/workflow/: builder.py
tests/expert_loop/: test_expert_loop.py
tests/llm/: test_client.py  test_planning.py
tests/schedule_system/: test_scheduler_context.py
tests/tools/: test_apply_patch.py
